--- a/Assignment_5_CS156.ipynb
+++ b/Assignment_5_CS156.ipynb
@@ -31,6 +31,10 @@
       },
       "cell_type": "markdown",
       "source": [
+        "SEE COLAB HERE: https://colab.research.google.com/drive/1BfPvhdr1XLlXdeRot_2R4bCfu8dzvVcU\n",
+        "\n",
+        "SEE IN GITHUB REPO HERE: https://github.com/GitWahome/Machine-Learning/blob/master/Assignment_5_CS156.ipynb\n",
+        "\n",
         "**UTILITY FUNCTIONS**\n",
         "\n",
         "Here I import all the packages I need. The denistyFit() function takes in the dataset we are working with, the criteria of evaluation be it by day, month, monthyear etc, and the size of the sample we want to get from the density estimator. I set them up this way to facilitate reuse of the function as both an estimator. The size of the sample generated for the days is dependent on the number of transactions for the month my initial estimator tells me. This will be used to generate the fake month. \n",
@@ -42,11 +46,11 @@
       "metadata": {
         "id": "IgtYro93Dp-s",
         "colab_type": "code",
+        "outputId": "8f09a67b-2de2-4bf3-aad8-8be6f628c785",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        },
-        "outputId": "8f09a67b-2de2-4bf3-aad8-8be6f628c785"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -94,7 +98,7 @@
         "  return kde.sample(samSize)\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -273,11 +277,11 @@
       "metadata": {
         "id": "s4I--wfgXAfH",
         "colab_type": "code",
+        "outputId": "f72738bf-1e22-4ea2-815c-ba639353482e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 851
-        },
-        "outputId": "f72738bf-1e22-4ea2-815c-ba639353482e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -286,7 +290,7 @@
         "print(\"Four our sample month, we take about {} transactions for that Month\".format(numMonthTransactions))\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,11 +404,11 @@
       "metadata": {
         "id": "wgws6EiGM328",
         "colab_type": "code",
+        "outputId": "d4d6e010-2d4f-459c-9c10-5ebd91b807fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 834
-        },
-        "outputId": "d4d6e010-2d4f-459c-9c10-5ebd91b807fc"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -418,7 +422,7 @@
         "sampleMonth = numMonthStr\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,11 +535,11 @@
       "metadata": {
         "id": "6cnEVjFoM30W",
         "colab_type": "code",
+        "outputId": "c7efac1e-d1a6-42a8-f251-8c558cb12eb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 834
-        },
-        "outputId": "c7efac1e-d1a6-42a8-f251-8c558cb12eb4"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -548,7 +552,7 @@
         "sampleDays = numDayStr\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,11 +665,11 @@
       "metadata": {
         "id": "XlChTwszM35Y",
         "colab_type": "code",
+        "outputId": "d6671210-8d74-4a37-98fd-7abe33bafe09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 834
-        },
-        "outputId": "d6671210-8d74-4a37-98fd-7abe33bafe09"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -674,7 +678,7 @@
         "sampleMonthlyTrans = [tran[0]*1000 for tran in sampleAmount]\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,11 +803,11 @@
       "metadata": {
         "id": "b0XAD4dP6JeB",
         "colab_type": "code",
+        "outputId": "9b7c8ee9-1ca7-4f8a-9476-cb750b3381e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 380
-        },
-        "outputId": "9b7c8ee9-1ca7-4f8a-9476-cb750b3381e0"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -820,7 +824,7 @@
         "print(\"################################################################################################################\")\n",
         "fakeMonth = sampleMonth()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,11 +951,11 @@
       "metadata": {
         "id": "-XORJxwT98jJ",
         "colab_type": "code",
+        "outputId": "9cd4f70a-971f-4d1a-a1e0-dbb08be01b66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 631
-        },
-        "outputId": "9cd4f70a-971f-4d1a-a1e0-dbb08be01b66"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -975,7 +979,7 @@
         "Benford(fakeMonth)\n",
         "print(\"################################################################################################################\")"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,10 +1120,26 @@
       },
       "cell_type": "markdown",
       "source": [
-        "I have to note though, the fact that my transactions were independent of the year was concerning. This assumed that the owner of the transactions never got wealthier, I am not considering that they got poorer, gotta be optimistic. In this regard, I abstract the expected rise in the magnitude and frequency of transactions that would be expected should they get wealthier or poorer. In this regard, if I compared the generated transactions and the recent transactions, there should be a discrepancy that tells me these are fake.\n",
-        "\n",
-        "The probabilities I encode are supposed to help me maximize the likelihood that the days that I assign the generated transactions is the day that those transactions happen. This is because I try and infer the probablilty that our user will withdraw at any specific day. This assumption assumes this stayed consistent over the three years but I doubt this would be the case. Extensive stratification would reflect different patterns of transactions. I would want to compare transaction for this month and the ones of the previous 3 or 4 months. The transaction rate and magnitude and subsequently the probabilites of transactions for my days should mainly be influenced by the fluctuation of income. if I assumed had constant income the past 3 years and their lifestyle stayed pretty much the same, then my inference would be sensible. I expect though that their lifestyle improved, they started spending da dollar before thanos snapped and so this rate in my false month would be out of place if I monitored the transaction trend over the past few months.\n",
-        "\n",
+        "I have to note though, the fact that my transactions were independent of the year was concerning. This assumed that the owner of the transactions never got wealthier, I am not considering that they got poorer, gotta be optimistic. In this regard, I abstract the expected rise in the magnitude and frequency of transactions that would be expected should they get wealthier or poorer. In this regard, if I compared the generated transactions and the recent transactions, there should be a discrepancy that tells me these are fake.\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "6yC60dk9qRiN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "The probabilities I encode are supposed to help me maximize the likelihood that the days that I assign the generated transactions is the day that those transactions happen. This is because I try and infer the probablilty that our user will withdraw at any specific day. This assumption assumes this stayed consistent over the three years but I doubt this would be the case. Extensive stratification would reflect different patterns of transactions. I would want to compare transaction for this month and the ones of the previous 3 or 4 months. The transaction rate and magnitude and subsequently the probabilites of transactions for my days should mainly be influenced by the fluctuation of income. if I assumed had constant income the past 3 years and their lifestyle stayed pretty much the same, then my inference would be sensible. I expect though that their lifestyle improved, they started spending da dollar before thanos snapped and so this rate in my false month would be out of place if I monitored the transaction trend over the past few months."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "7fnw4kStqXAC",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
         "Finally, I have to note something that I think I captured quite well, lets assume the lifestyle stayed the same, if Musk is say a Christian, then we expect more transactions during Sundays and such. We generally expect mor etransactions during the weekends. By encoding the probability of days based on the transactions, I captured the spending habits quite well. In fact, I think the thing affected most by the increased income would be the magnitude of transactions and not the rate. They would just have bigger withdrawals the same if not less times but I assume this stays rroughly constant. In this regard, if the auditor was monitoring our spending habit, we actually might get away with our transaction fraud."
       ]
     }
