--- a/Assignment_5_CS156.ipynb
+++ b/Assignment_5_CS156.ipynb
@@ -977,7 +977,7 @@
         "  display(df)\n",
         "  \n",
         "Benford(fakeMonth)\n",
-        "print(\"################################################################################################################\")"
+        "print(\"################################################################################################################\\n\\n\\n\\n\\n\\n\\n\\n\")"
       ],
       "execution_count": 0,
       "outputs": [
